@@ -14,15 +14,15 @@
  * limitations under the License.
  */
 
-#ifndef MOD_DISK_CACHE_H
-#define MOD_DISK_CACHE_H
+#ifndef MOD_CACHE_DISK_H
+#define MOD_CACHE_DISK_H
 
 #include "apr_file_io.h"
 
-#include "disk_cache_common.h"
+#include "cache_disk_common.h"
 
 /*
- * include for mod_disk_cache: Disk Based HTTP 1.1 Cache.
+ * include for mod_cache_disk: Disk Based HTTP 1.1 Cache.
  */
 
 typedef struct {
@@ -59,7 +59,7 @@ typedef struct disk_cache_object {
 
 
 /*
- * mod_disk_cache configuration
+ * mod_cache_disk configuration
  */
 /* TODO: Make defaults OS specific */
 #define CACHEFILE_LEN 20        /* must be less than HASH_LEN/2 */
@@ -88,4 +88,5 @@ typedef struct {
     int readtime_set:1;
 } disk_cache_dir_conf;
 
-#endif /*MOD_DISK_CACHE_H*/
+#endif /*MOD_CACHE_DISK_H*/
+
