@@ -6,6 +6,9 @@ Changes with Apache 2.3.9
      Fix a denial of service attack against mod_reqtimeout.
      [Stefan Fritsch]
 
+  *) mod_cache_disk: mod_disk_cache renamed to mod_cache_disk, to be
+     consistent with the naming of other modules. [Graham Leggett]
+
   *) mod_setenvif: Add SetEnvIfExpr directive to set env var depending on
      expression. [Stefan Fritsch]
 
